fix: share alignments

--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -90,6 +90,7 @@
       a {
         display: flex;
         align-items: center;
+        justify-content: space-between;
         padding: 8px 16px;
       }
     }
